--- a/api/package.json
+++ b/api/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "node-fetch": "^2.7.0",
-    "serverless-http": "^3.2.0",
-    "dotenv": "^16.4.5"
+    "serverless-http": "^3.2.0"
   }
 }
